<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.leaf.learningteamproject.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
<item
    android:id="@+id/action_about"
    android:orderInCategory="101"
    android:title="@string/action_about"
    app:showAsAction="never" />
<item
    android:id="@+id/action_help"
    android:orderInCategory="102"
    android:title="@string/action_help"
    app:showAsAction="never" />
<item
    android:id="@+id/action_logout"
    android:orderInCategory="103"
    android:title="@string/action_logout"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="0"
        android:title="@string/action_favorites"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_nearMe"
        android:orderInCategory="0"
        android:title="@string/action_nearMe"
        app:showAsAction="always"/>

</menu>
